--- a/index.html
+++ b/index.html
@@ -8,36 +8,41 @@
         <link rel="shortcut icon" href="./assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid elHeaderBox">
-              <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Categorias </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <a class="navbar-brand" href="#"> <img src="./assets/imagenes/Logo final.png" alt="" width="100" height="100"></a>
-              </div>
+        <header>
+            <div class="elHeaderBox">
+                <nav class="navbar navbar-expand-lg navbar-light bg-violet">
+                    <div class="container-fluid">
+                      <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon bg-white"></span>
+                      </button>
+                      <a class="navbar-brand" href="#"> <img src="./assets/imagenes/Logo final.png" alt="" width="100" height="100"></a>
+                      <div class="collapse navbar-collapse text-danger" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias </a>
+                            <ul class="dropdown-menu contenidoNav" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="#">Inicio</a></li>
+                              <li><a class="dropdown-item" href="./pages/gaming.html">Gaming</a></li>
+                              <li><a class="dropdown-item" href="./pages/videojuegos.html">Videojuegos</a></li>
+                              <li><a class="dropdown-item" href="./pages/streaming.html">Streaming</a></li>
+                              <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
             </div>
-          </nav>
-        
+        </header>
         <main>
+            <h1>The Gamer's Shire</h1>
             <h3 class="subtitulos3 boxSubtitulos">Streaming mas vistos por la comunidad</h3>
             <section class="container contenedorFlex">
                 <div class="row">
-                    <div class="col generalBoxes">
+                    <div class="col">
                         <img src="./assets/imagenes/A_Seagull_portada.png" class="boxImg" alt="A_Seagull - Overwatch 2 competitivo">
                         <h4 class="subtitulos4">A_Seagull - Overwatch 2 competitivo</h4>
                         <a href="https://www.twitch.tv/a_seagull" class="linksExternos" target="_blank">A_Seagull Twitch</a>
@@ -129,15 +134,14 @@
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col">
-                    <p class="parrafos">Nuestras redes</p>
-                    <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
-                    <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
+                    <a href="https://www.instagram.com/" class="linksExternos  target="_blank">Instragram</a>
+                    <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
                     <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
-                    <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
+                    <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
                     <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
-                    <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
+                    <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
                     <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
-                    <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
+                    <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
                 <div class="col">
                     <p class="parrafos">Todos los derechos reservados - JDL®</p>
