--- a/pages/streaming.html
+++ b/pages/streaming.html
@@ -6,102 +6,118 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
-        <header class="elHeaderBox">
-            <h1>The Gamer's Shire</h1>
+        <header>
             <div>
-                <img src="../assets/imagenes/Logo final.png" class="elLogo"  alt="logo">
-            </div>
-            <nav>
-                <div class="desplegarNav">
-                    <button class="botonNav">Categorias</button>
-                    <div class="contenidoNav">
-                        <li> <a href="../index.html">Inicio </a></li>
-                        <li> <a href="./gaming.html">Gaming</a></li>
-                        <li> <a href="./videojuegos.html">Videojuegos</a></li>
-                        <li> <a href="#">Streaming</a></li>
-                        <li> <a href="./contacto.html">contacto</a></li>
+                <nav class="navbar navbar-expand-lg navbar-light bg-violet">
+                    <div class="container-fluid elHeaderBox">
+                      <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon bg-white"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias </a>
+                            <ul class="dropdown-menu contenidoNav" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
+                              <li><a class="dropdown-item" href="./pages/gaming.html">Gaming</a></li>
+                              <li><a class="dropdown-item" href="./pages/videojuegos.html">Videojuegos</a></li>
+                              <li><a class="dropdown-item" href="#">Streaming</a></li>
+                              <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                        <a class="navbar-brand" href="#"> <img src="../assets/imagenes/Logo final.png" alt="" width="100" height="100"></a>
+                      </div>
                     </div>
-                </div>
-            </nav>
+                  </nav>
+            </div>
         </header>
         <main>
-            <h2>Streaming</h2>
-            <h3>Canales Especializados</h3>
-            <section>
-                <div>
-                    <img src="../assets/imagenes/migguztv.png" alt="MigguzTV">
-                    <p>MigguzTV - Canal especializado en World of Warcraft</p>
-                    <a href="https://www.twitch.tv/search?term=migguztv" target="_blank">MigguzTV</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/nicro4fun.jpg" alt="Nicro4fun">
-                    <p>nicro4fun - Canal especializado en RPG - Poe, Diablo.</p>
-                    <a href="https://www.twitch.tv/nicro4fun" target="_blank">Nicro4fun</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/froggerOW.png" alt="FroggerOW">
-                    <p>FroggerOW - Canal Especializado en Overwatch 2.</p>
-                    <a href="https://www.twitch.tv/froggerow" target="_blank">FroggerOW</a>
-                </div>
+            <h1>The Gamer's Shire</h1>
+            <h2 class="claseH2">Streaming</h2>
+            <h3 class="subtitulos3 boxSubtitulos">Canales Especializados</h3>
+            <section  class="container contenedorFlex">
+                <div class="row">
+                    <div class="col">
+                        <img src="../assets/imagenes/migguztv.png" class="boxImg" alt="MigguzTV">
+                        <h4  class="subtitulos4">MigguzTV - Canal especializado en World of Warcraft</h4>
+                        <a href="https://www.twitch.tv/search?term=migguztv" class="linksExternos" target="_blank">MigguzTV</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/nicro4fun.jpg" class="boxImg" alt="Nicro4fun">
+                        <h4 class="subtitulos4">nicro4fun - Canal especializado en RPG - Poe, Diablo.</h4>
+                        <a href="https://www.twitch.tv/nicro4fun" class="linksExternos" target="_blank">Nicro4fun</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/froggerOW.png" class="boxImg" alt="FroggerOW">
+                        <h4 class="subtitulos4">FroggerOW - Canal Especializado en Overwatch 2</h4>
+                        <a href="https://www.twitch.tv/froggerow" class="linksExternos" target="_blank">FroggerOW</a>
+                    </div>
+                </div>             
             </section>
-            <h3>Recomendados del editor</h3>
-            <section>
-                <div>
-                    <img src="../assets/imagenes/duendepablo.jpg" alt="Duendepablo">
-                    <p>DuendePablo - Gaming, IRL, Entretenimiento</p>
-                    <a href="https://www.twitch.tv/duendepablo" target="_blank">Duendepablo</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/robergalatti.jpg" alt="Roberto Galati">
-                    <p>robergalati - IRL, gaming, humor</p>
-                    <a href="https://www.twitch.tv/search?term=robergalati" target="_blank">Robergalati</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/baity.png" alt="Baitybait">
-                    <p>BaityBait - industria del gaming y humor</p>
-                    <a href="https://www.twitch.tv/baitybait" target="_blank">Baitybait</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/tomasrebord.png" alt="Tomas Rebord">
-                    <p>tomasrebord - Politica, entrevistas y Entretenimiento</p>
-                    <a href="https://www.twitch.tv/tomasrebord" target="_blank">tomasrebord</a>
+            <h3 class="subtitulos3 boxSubtitulos">Recomendados del editor</h3>
+            <section class="container contenedorFlex">
+                <div class="row">
+                    <div class="col">
+                        <img src="../assets/imagenes/duendepablo.jpg" class="boxImg" alt="Duendepablo">
+                        <h4 class="subtitulos4" >DuendePablo - Gaming, IRL, Entretenimiento</h4>
+                        <a href="https://www.twitch.tv/duendepablo" class="linksExternos" target="_blank">Duendepablo</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/robergalatti.jpg" class="boxImg" alt="Roberto Galati">
+                        <h4  class="subtitulos4">robergalati - IRL, gaming, humor</h4>
+                        <a href="https://www.twitch.tv/search?term=robergalati" class="linksExternos" target="_blank">Robergalati</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/baity.png" class="boxImg" alt="Baitybait">
+                        <h4  class="subtitulos4">BaityBait - industria del gaming y humor</h4>
+                        <a href="https://www.twitch.tv/baitybait" class="linksExternos" target="_blank">Baitybait</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/tomasrebord.png" class="boxImg" alt="Tomas Rebord">
+                        <h4  class="subtitulos4">tomasrebord - Politica, entrevistas y Entretenimiento</h4>
+                        <a href="https://www.twitch.tv/tomasrebord" class="linksExternos" target="_blank">tomasrebord</a>
+                    </div>
                 </div>
             </section>
         </main>
-        <section>
-        <h3>Musica</h3>
-            <div>
-                <img src="../assets/imagenes/djmiss shelton.png" alt="Dj Miss Shelton">
-                <p>DJMissShelton - DJ Party</p>
-                <a href="https://www.twitch.tv/djmissshelton" target="_blank">DjMissShelton</a>
+        <h3 class="subtitulos3 boxSubtitulos">Musica</h3>
+        <section class="container contenedorFlex">
+            <div class="row">
+                <div class="col">
+                    <img src="../assets/imagenes/djmiss shelton.png" class="boxImg" alt="Dj Miss Shelton">
+                    <h4   class="subtitulos4">DJMissShelton - DJ Party</h4>
+                    <a href="https://www.twitch.tv/djmissshelton" class="linksExternos" target="_blank">DjMissShelton</a>
+                </div>
+                <div class="col">
+                    <img src="../assets/imagenes/sintica.png" class="boxImg" alt="Sintica">
+                    <h4  class="subtitulos4">Sintica - DJ House</h4>
+                    <a href="https://www.twitch.tv/sintica" class="linksExternos" target="_blank">Sintica</a>
+                </div>
+                <div class="col">
+                    <img src="../assets/imagenes/chillhop.png" class="boxImg" alt="Chillhop Music">
+                    <h4  class="subtitulos4">ChillhopMusic -  Radio  jazzy & lofi hip hop beats</h4>
+                    <a href="https://www.twitch.tv/chillhopmusic" class="linksExternos" target="_blank">ChillhopMusic</a>
+                </div>
             </div>
-            <div>
-                <img src="../assets/imagenes/sintica.png" alt="Sintica">
-                <p>Sintica - DJ House</p>
-                <a href="https://www.twitch.tv/sintica" target="_blank">Sintica</a>
-            </div>
-            <div>
-                <img src="../assets/imagenes/chillhop.png" alt="Chillhop Music">
-                <p>ChillhopMusic -  Radio  jazzy & lofi hip hop beats</p>
-                <a href="https://www.twitch.tv/chillhopmusic" target="_blank">ChillhopMusic</a>
-            </div>
+          
         </section>
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col">
-                    <p class="parrafos">Nuestras redes</p>
-                    <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
-                    <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
+                    <a href="https://www.instagram.com/" class="linksExternos  target="_blank">Instragram</a>
+                    <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
                     <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
-                    <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
+                    <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
                     <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
-                    <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
+                    <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
                     <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
-                    <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
+                    <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                 </div>
                 <div class="col">
                     <p class="parrafos">Todos los derechos reservados - JDL®</p>
