--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -6,128 +6,142 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Gamer's Shire</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
-        <header class="elHeaderBox">
-            <h1>The Gamer's Shire</h1>
+        <header>
             <div>
-                <img src="../assets/imagenes/Logo final.png" class="elLogo"  alt="logo">
-            </div>
-            <nav>
-                <div class="desplegarNav">
-                    <button class="botonNav">Categorias</button>
-                    <div class="contenidoNav">
-                        <li> <a href="../index.html">Inicio </a></li>
-                        <li> <a href="./gaming.html">Gaming</a></li>
-                        <li> <a href="#">Videojuegos</a></li>
-                        <li> <a href="./streaming.html">Streaming</a></li>
-                        <li> <a href="./contacto.html">contacto</a></li>
+                <nav class="navbar navbar-expand-lg navbar-light bg-violet">
+                    <div class="container-fluid elHeaderBox">
+                      <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon bg-white"></span>
+                      </button>
+                      <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="100" height="100"></a>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item dropdown desplegarNav">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias </a>
+                            <ul class="dropdown-menu contenidoNav" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
+                              <li><a class="dropdown-item" href="./gaming.html">Gaming</a></li>
+                              <li><a class="dropdown-item" href="#">Videojuegos</a></li>
+                              <li><a class="dropdown-item" href="./pages/streaming.html">Streaming<a><li>
+                              <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
-                </div>
-            </nav>
+                  </nav>
+            </div>
         </header>
         <main>
-            <h2>Videojuegos</h2>
-            <h3>Nuestras copias digitales</h3>
-            <section>
-                <div>
-                    <img src="../assets/imagenes/wow 4.jpg" alt="World of Warcraft: Dragonflight">
-                    <h4>Precompra: World of Warcraft Dragonflight</h4>
-                    <a href="https://us.shop.battle.net/es-es/product/world-of-warcraft-dragonflight?utm_source=worldofwarcraft.com&utm_campaign=bop-wow-global-dragonflight-prepurchase&utm_medium=internal&utm_content=hp-masthead" target="_blank">World of Warcraft Dragonflight</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/poe 2.jpg" alt="Path of Exile: Lake of Kalandra">
-                    <h4>Free to play: Path of Exile: Lake of Kalandra</h4>
-                    <a href="https://www.pathofexile.com/" target="_blank">Path of Exile: Lake of Kalandra</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/cyberpunk 2077.jpg" alt="Cyberpunk 2077">
-                    <h4>Cyberpunk 2077</h4>
-                    <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" target="_blank">Cyberpunk 2077</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/witcher 3.jpg" alt="The Witcher 3: Wild Hunt">
-                    <h4>The Witcher 3: Wild Hunt - Game of the Year Edition</h4>
-                    <a href="https://store.steampowered.com/app/292030/The_Witcher_3_Wild_Hunt/" target="_blank">The Witcher 3: Wild Hunt</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/overwatch 2.jpg" alt="Overwatch 2">
-                    <h4>Free to play: Overwatch 2</h4>
-                    <a href="https://overwatch.blizzard.com/es-es/" target="_blank">Overwatch 2</a>
-                </div>
+            <h1>The Gamer's Shire</h1>
+            <h2 class="claseH2">Videojuegos</h2>
+            <h3 class="subtitulos3 boxSubtitulos">Nuestras copias digitales</h3>
+            <section class="container contenedorFlex">
+                <div class="row">
+                    <div class="col">
+                        <img src="../assets/imagenes/wow 4.jpg" class="boxImg" alt="World of Warcraft: Dragonflight">
+                        <h4   class="subtitulos4">Precompra: World of Warcraft Dragonflight</h4>
+                        <a href="https://us.shop.battle.net/es-es/product/world-of-warcraft-dragonflight?utm_source=worldofwarcraft.com&utm_campaign=bop-wow-global-dragonflight-prepurchase&utm_medium=internal&utm_content=hp-masthead"  class="linksExternos" target="_blank">World of Warcraft Dragonflight</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/poe 2.jpg" class="boxImg" alt="Path of Exile: Lake of Kalandra">
+                        <h4   class="subtitulos4">Free to play: Path of Exile: Lake of Kalandra</h4>
+                        <a href="https://www.pathofexile.com/"  class="linksExternos" target="_blank">Path of Exile: Lake of Kalandra</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/cyberpunk 2077.jpg" class="boxImg" alt="Cyberpunk 2077">
+                        <h4   class="subtitulos4">Cyberpunk 2077</h4>
+                        <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/"   class="linksExternos" target="_blank">Cyberpunk 2077</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/witcher 3.jpg" class="boxImg" alt="The Witcher 3: Wild Hunt">
+                        <h4   class="subtitulos4">The Witcher 3: Wild Hunt - Game of the Year Edition</h4>
+                        <a href="https://store.steampowered.com/app/292030/The_Witcher_3_Wild_Hunt/"  class="linksExternos" target="_blank">The Witcher 3: Wild Hunt</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/overwatch 2.jpg" class="boxImg" alt="Overwatch 2">
+                        <h4   class="subtitulos4">Free to play: Overwatch 2</h4>
+                        <a href="https://overwatch.blizzard.com/es-es/"  class="linksExternos" target="_blank">Overwatch 2</a>
+                    </div>
+                </div>                 
             </section>
-            <h3>Lore de tus juegos favoritos</h3>
-            <section>
-                <div>
-                    <img src="../assets/imagenes/Wow 2.jpg" alt="Lore World of Warcraft">
-                    <h4>Historia completa: World of Warcraft</h4>
-                    <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal" target="_blank">World of Warcraft</a>
+            <h3 class="subtitulos3 boxSubtitulos">Lore de tus juegos favoritos</h3>
+            <section class="container contenedorFlex">
+                <div class="row">
+                    <div class="col">
+                        <img src="../assets/imagenes/Wow 2.jpg" class="boxImg" alt="Lore World of Warcraft">
+                        <h4   class="subtitulos4">Historia completa: World of Warcraft</h4>
+                        <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"   class="linksExternos" target="_blank">World of Warcraft</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/elden ring vol 1.jpg" class="boxImg" alt="Elden Ring Volumen 1">
+                        <h4   class="subtitulos4">Elden Ring: Los Libros Del Saber, Volumen I: Las Tierras Intermedias</h4>
+                        <a href="https://www.amazon.es/Elden-Ring-Volumen-Tierras-Intermedias/dp/3869931175"  class="linksExternos" target="_blank">Elden Ring Vol. 1</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/elden ring vol 2.jpg" class="boxImg" alt="Elden Ring Volumen 2">
+                        <h4   class="subtitulos4">Elden Ring: Los Libros Del Saber, Volumen Ii: Esquirlas De La Devastación</h4>
+                        <a href="https://www.amazon.es/Elden-Ring-Volumen-Esquirlas-Devastaci%C3%B3n/dp/3869931221/ref=sr_1_2?keywords=elden+ring+los+libros+del+saber&qid=1666227177&qu=eyJxc2MiOiIyLjI0IiwicXNhIjoiMS40MCIsInFzcCI6IjAuOTkifQ%3D%3D&sprefix=elden+ring+%2Caps%2C386&sr=8-2" class="linksExternos" target="_blank">Elden Ring Vol. 2</a>
+                    </div>
+                    <div class="col">
+                        <img src="../assets/imagenes/Poe.jpg" class="boxImg" alt="Path fo Exile">
+                        <h4   class="subtitulos4">Path of Exile - Full story</h4>
+                        <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos" target="_blank">Path of Exile</a>
+                    </div>
+                    <div class="col"> 
+                        <img src="../assets/imagenes/overwatch lore.jpg" class="boxImg" alt="Overwatch">
+                        <h4   class="subtitulos4">Lore completo - Overwatch</h4>
+                        <a href="https://altertime.es/category/lore-de-overwatch" class="linksExternos" target="_blank">Lore Overwatch</a>
+                    </div>
                 </div>
-                <div>
-                    <img src="../assets/imagenes/elden ring vol 1.jpg" alt="Elden Ring Volumen 1">
-                    <h4>Elden Ring: Los Libros Del Saber, Volumen I: Las Tierras Intermedias</h4>
-                    <a href="https://www.amazon.es/Elden-Ring-Volumen-Tierras-Intermedias/dp/3869931175" target="_blank">Elden Ring Vol. 1</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/elden ring vol 2.jpg" alt="Elden Ring Volumen 2">
-                    <h4>Elden Ring: Los Libros Del Saber, Volumen Ii: Esquirlas De La Devastación</h4>
-                    <a href="https://www.amazon.es/Elden-Ring-Volumen-Esquirlas-Devastaci%C3%B3n/dp/3869931221/ref=sr_1_2?keywords=elden+ring+los+libros+del+saber&qid=1666227177&qu=eyJxc2MiOiIyLjI0IiwicXNhIjoiMS40MCIsInFzcCI6IjAuOTkifQ%3D%3D&sprefix=elden+ring+%2Caps%2C386&sr=8-2" target="_blank">Elden Ring Vol. 2</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/Poe.jpg" alt="Path fo Exile">
-                    <h4>Path of Exile - Full story</h4>
-                    <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" target="_blank">Path of Exile</a>
-                </div>
-                <div>
-                    <img src="../assets/imagenes/overwatch lore.jpg" alt="Overwatch">
-                    <h4>Lore completo - Overwatch</h4>
-                    <a href="https://altertime.es/category/lore-de-overwatch" target="_blank">Lore Overwatch</a>
-                </div>
+               
             </section>
         </main>
-            <h3>Reseñas y criticas</h3>
-            <section>
-                <h4>World of Warcraft Shadowlands</h4>
-                <p>- World of Warcraft Shadowlands: 
+            <h3 class="subtitulos3 boxSubtitulos">Reseñas y criticas</h3>
+            <section class="container contenedorFlex">
+                <h4   class="subtitulos4">World of Warcraft Shadowlands</h4>
+                <p class="parrafos">- World of Warcraft Shadowlands: 
                     POSITIVO, se trata de un nuevo universo, aire fresco fuera de lo conocido., juega con personajes queridos, como Uther y Drakka, y lo hace bien.
                    Innovación en jugabilidad con las curias. Torghast es sin duda un acierto muy divertido. Buena inclusión de un tutorial.
                    La música y el ambiente cumplen como siempre. Reducción del nivel máximo a 60.
                     NEGATIVO
                    La elección de los pactos se siente poco balanceada en algunas clases. No todas las zonas son igual de interesantes.
                    El regresar tantas veces a Oribos como punto central llega a ser molesto. </p>
-                <a href="https://tierragamer.com/noticias/videojuegos/world-of-warcraft-shadowlands-resena/" target="_blank">mas info</a>
+                <a href="https://tierragamer.com/noticias/videojuegos/world-of-warcraft-shadowlands-resena" class="linksExternos" target="_blank">mas info</a>
             </section>
-            <section>
-                <h4>Cyberpunk 2077</h4>
-                <p>- Cyberpunk 2077:
+            <section class="container contenedorFlex">
+                <h4   class="subtitulos4">Cyberpunk 2077</h4>
+                <p class="parrafos">- Cyberpunk 2077:
                     El nuevo videojuego de rol en primera persona con estructura de mundo abierto de CD Projekt RED. 
                     Los padres de The Witcher nos presentan para Xbox One, PC y PS4 una aventura de corte futurista y ciberpunk en la que 
                     encarnaremos a un personaje diseñado a nuestra medida y en la que tendremos que sobrevivir en una peligrosa urbe plagada de corporaciones,
                      ciborgs, bandas y las más variadas amenazas tecnológicas. </p>
-                <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" target="_blank">mas info</a>
+                <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" class="linksExternos"  target="_blank">mas info</a>
             </section>
-            <section>
-                <h4>Path fo Exile</h4>
-                <p>-  Path of Exile:
+            <section class="container contenedorFlex">
+                <h4   class="subtitulos4">Path fo Exile</h4>
+                <p class="parrafos">-  Path of Exile:
                     Eres un Exiliado esforzándote por sobrevivir en el oscuro continente de Wraeclast mientras luchas para conseguir poder que te permitirá vengarte de quienes te hicieron daño.
                      Creado por jugadores expertos, Path of Exile es un RPG de Acción online que se desarrolla en un oscuro mundo de fantasía. 
                      Enfocado en la acción de combate visceral, ítems poderosos y una enorme personalización de personajes, Path of Exile es completamente gratis y nunca será pay-to-win. </p>
-                <a href="https://store.steampowered.com/app/238960/Path_of_Exile/" target="_blank">mas info</a>
+                <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" class="linksExternos"  target="_blank">mas info</a>
             </section>
             <footer class="container-fluid flexFooter2">
                 <div class="row">
                     <div class="col">
-                        <p class="parrafos">Nuestras redes</p>
-                        <a href="https://www.instagram.com/" class="linksExternos target="_blank">Instragram</a>
-                        <img src="./assets/imagenes/Instagram.svg" class="imagenesVectorizadas" alt="Instagram">
+                        <a href="https://www.instagram.com/" class="linksExternos  target="_blank">Instragram</a>
+                        <img src="../assets/imagenes/Instagram.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Instagram">
                         <a href="https://www.twitch.tv/" class="linksExternos target="_blank">Twitch</a>
-                        <img src="./assets/imagenes/twitch6.svg" class="imagenesVectorizadas" alt="Twitch">
+                        <img src="../assets/imagenes/twitch6.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite " alt="Twitch">
                         <a href="https://www.reddit.com/" class="linksExternos target="_blank">Reddit</a>
-                        <img src="./assets/imagenes/reddit2.svg" class="imagenesVectorizadas" alt="Reddit">
+                        <img src="../assets/imagenes/reddit2.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Reddit">
                         <a href="https://store.steampowered.com/" class="linksExternos target="_blank">Steam</a>
-                        <img src="./assets/imagenes/steam.svg" class="imagenesVectorizadas" alt="Steam">
+                        <img src="../assets/imagenes/steam.svg" class="imagenesVectorizadas animate__animated animate__shakeY animate__delay-2s animate__slower animate__infinite" alt="Steam">
                     </div>
                     <div class="col">
                         <p class="parrafos">Todos los derechos reservados - JDL®</p>
